After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 685220 - rtsp-client: do not destroy the rtsp watch in the rtsp watch functions
rtsp-client: do not destroy the rtsp watch in the rtsp watch functions
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-rtsp-server
unspecified
Other Linux
: Normal normal
: 1.2.3
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-10-01 14:23 UTC by Patricia Muscalu
Modified: 2014-02-25 22:28 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
rtsp-client.c: do not destroy rtsp watch (1.37 KB, patch)
2012-10-01 14:23 UTC, Patricia Muscalu
none Details | Review

Description Patricia Muscalu 2012-10-01 14:23:18 UTC
Created attachment 225496 [details] [review]
rtsp-client.c: do not destroy rtsp watch

Currently, the client watch is destroyed in message_received (while handling TEARDOWN request => close_connection()) and tunnel_complete(). However, we are still in dispatch().  

The rtsp watch is automatically destroyed after the rtsp watch function closed() has been called.
Comment 1 Wim Taymans 2012-10-05 09:49:34 UTC
commit 870b8db2791663b081b625d3b78a80c8fda15f42
Author: Patricia Muscalu <patricia@axis.com>
Date:   Mon Oct 1 16:13:50 2012 +0200

    rtsp-client: do not destroy the rtsp watch
    
    Don't destroy the client watch while dispatching.  The rtsp watch is
    automatically destroyed after the rtsp watch function closed() has
    been called.
    
    Fixes https://bugzilla.gnome.org/show_bug.cgi?id=685220